--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,16 @@
 language: ruby
+bundler_args: --jobs 4 --retry 3
 rvm:
-  - 1.8.7
-  - 1.9.3
-  - 2.0.0
-  - 2.1.5
-  - 2.2.0
-  - ree
-  - jruby-1.7.21
-  - jruby-9.0.0.0
-gemfile:
-  - Gemfile
-  - gemfiles/nokogiri-1.5.gemfile
-matrix:
-  exclude:
-    - rvm: 1.8.7
-      gemfile: Gemfile
-    - rvm: ree
-      gemfile: Gemfile
-    - rvm: jruby-9.0.0.0
-      gemfile: gemfiles/nokogiri-1.5.gemfile
-    - rvm: jruby-1.7.21
-      gemfile: gemfiles/nokogiri-1.5.gemfile
+- 2.0.0-p647
+- 2.1.7
+- 2.2.3
+- jruby-1.7.22
+- jruby-9.0.1.0
+cache: bundler
+sudo: false
+before_script:
+- "gem install bundler-audit --no-rdoc --no-ri && bundle-audit update"
+script:
+- bundle-audit
+- bundle exec rake license_finder
+- bundle exec rake test
