--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,12 @@ rvm:
   - 2.0.0
   - 2.1.5
   - ree
+gemfile:
+  - Gemfile
+  - gemfiles/nokogiri-1.5.gemfile
+matrix:
+  exclude:
+    - rvm: 1.8.7
+      gemfile: Gemfile
+    - rvm: ree
+      gemfile: Gemfile
