--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ rvm:
   - 2.1.5
   - 2.2.0
   - ree
+  - jruby-1.7.19
 gemfile:
   - Gemfile
   - gemfiles/nokogiri-1.5.gemfile
@@ -15,3 +16,5 @@ matrix:
       gemfile: Gemfile
     - rvm: ree
       gemfile: Gemfile
+    - rvm: jruby-1.7.19
+      gemfile: gemfiles/nokogiri-1.5.gemfile
