--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,10 @@ language: ruby
 rvm:
   - 1.8.7
   - 1.9.3
+  - 2.0.0
+  - 2.1.0
   - ree
+
+before_install:
+  - gem update --system 2.1.11
+  - gem install bundler -v 1.11.2
