--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ rvm:
 gemfile:
   - Gemfile
   - gemfiles/nokogiri-1.5.gemfile
+before_install:
+  - unset _JAVA_OPTIONS
+  - gem update bundler
 matrix:
   exclude:
     - rvm: 1.8.7
