Add exclusion for running the gemfile with nokogiri 1.5
Nokogiri 1.5.10 seems to only work on pre ruby 1.9 versions.

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,5 +31,7 @@ matrix:
       gemfile: gemfiles/nokogiri-1.5.gemfile
     - rvm: jruby-9.2.0.0
       gemfile: gemfiles/nokogiri-1.5.gemfile
+    - rvm: 2.6.2
+      gemfile: gemfiles/nokogiri-1.5.gemfile
 env:
   - JRUBY_OPTS="--debug"
