--- a/.travis.yml
+++ b/.travis.yml
@@ -30,5 +30,17 @@ matrix:
       gemfile: gemfiles/nokogiri-1.5.gemfile
     - rvm: jruby-9.2.0.0
       gemfile: gemfiles/nokogiri-1.5.gemfile
+    - rvm: 2.1.5
+      gemfile: gemfiles/nokogiri-1.5.gemfile
+    - rvm: 2.2.0
+      gemfile: gemfiles/nokogiri-1.5.gemfile
+    - rvm: 2.3.0
+      gemfile: gemfiles/nokogiri-1.5.gemfile
+    - rvm: 2.4.0
+      gemfile: gemfiles/nokogiri-1.5.gemfile
+    - rvm: 2.5.0
+      gemfile: gemfiles/nokogiri-1.5.gemfile
+    - rvm: 2.6.2
+      gemfile: gemfiles/nokogiri-1.5.gemfile
 env:
   - JRUBY_OPTS="--debug"
