--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ rvm:
   - 2.4.6
   - 2.5.5
   - 2.6.3
+  - 2.7.0
   - ree
   - jruby-1.7.27
   - jruby-9.1.17.0
@@ -41,6 +42,8 @@ matrix:
     - rvm: 2.5.5
       gemfile: gemfiles/nokogiri-1.5.gemfile
     - rvm: 2.6.3
+      gemfile: gemfiles/nokogiri-1.5.gemfile
+    - rvm: 2.7.0
       gemfile: gemfiles/nokogiri-1.5.gemfile
 env:
   - JRUBY_OPTS="--debug"
