--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ rvm:
   - 2.5.8
   - 2.6.6
   - 2.7.2
+  - 3.0.0
   - ree
   - jruby-1.7.27
   - jruby-9.1.17.0
@@ -44,6 +45,8 @@ matrix:
     - rvm: 2.6.6
       gemfile: gemfiles/nokogiri-1.5.gemfile
     - rvm: 2.7.2
+      gemfile: gemfiles/nokogiri-1.5.gemfile
+    - rvm: 3.0.0
       gemfile: gemfiles/nokogiri-1.5.gemfile
 env:
   - JRUBY_OPTS="--debug"
