--- a/gem-push.yml
+++ b/gem-push.yml
@@ -5,10 +5,10 @@ on: [push, pull_request]
 jobs:
   test:
     name: Unit test
-    runs-on: [ubuntu-latest, macos-latest]
     strategy:
       fail-fast: false
       matrix:
+        os: [ubuntu-latest, macos-latest]
         ruby-version: [2.1.10, 2.2.10, 2.3.8, 2.4.6, 2.5.8, 2.6.6, 2.7.2, 3.0.1, jruby-9.1.17.0, jruby-9.2.17.0, truffleruby]
 
     steps:
