--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,8 +8,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, macos-latest]
+        os: [ubuntu-20.04]
         ruby-version: [2.6, 2.7, 3.0, 3.1, 3.2, jruby-9.3, jruby-9.4, truffleruby]
+        include:
+          - os: macos-latest
+            ruby-version: 2.6
+          - os: macos-latest
+            ruby-version: 3.0
+          - os: macos-latest
+            ruby-version: 3.2
+          - os: macos-latest
+            ruby-version: jruby-9.3
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -26,6 +35,7 @@ jobs:
 
       - name: Coveralls
         uses: coverallsapp/github-action@master
+        if: ${{ matrix.ruby-version != 'truffleruby' }}
         with:
           github-token: ${{ secrets.github_token }}
           parallel: true
