--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,12 +9,8 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04] # macos-latest
-        ruby-version: [2.6, 2.7, 3.0, 3.1, 3.2, jruby-9.3, jruby-9.4, truffleruby]
+        ruby-version: [3.0, 3.1, 3.2, jruby-9.3, jruby-9.4, truffleruby]
         include:
-          - os: macos-latest
-            ruby-version: 2.6
-          - os: macos-latest
-            ruby-version: 2.7
           - os: macos-latest
             ruby-version: 3.0
           - os: macos-latest
