Fix TruffleRuby simplecov. Also move Rubocop into the core test.yml file.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,23 @@ name: ruby-saml CI
 on: [push, pull_request]
 
 jobs:
+  rubocop:
+    runs-on: ubuntu-latest
+    env:
+      CI: true
+      TESTOPTS: '-v'
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Ruby 3.3
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.3
+          bundler-cache: true
+      - name: Install dependencies
+        run: bundle install
+      - name: Run RuboCop
+        run: bundle exec rubocop --parallel
+
   test:
     name: Unit test
     strategy:
@@ -40,9 +57,6 @@ jobs:
 
       - name: Coveralls
         uses: coverallsapp/github-action@master
-        # 2023/03/07 - Simplecov is not working on TruffleRuby.
-        # TruffleRuby tests are otherwise passing.
-        if: ${{ matrix.ruby-version != 'truffleruby' }}
         with:
           github-token: ${{ secrets.github_token }}
           parallel: true
