--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,27 @@ AllCops:
     - 'tmp/**/*'
     - 'vendor/**/*'
 
+Metrics/AbcSize:
+  Max: 200
+
+Metrics/BlockLength:
+  Max: 100
+
+Metrics/ClassLength:
+  Max: 1000
+
+Metrics/CyclomaticComplexity:
+  Max: 30
+
+Metrics/MethodLength:
+  Max: 100
+
+Metrics/ModuleLength:
+  Max: 1000
+
+Metrics/PerceivedComplexity:
+  Max: 30
+
 Style/Alias:
   EnforcedStyle: prefer_alias_method
 
